src/styles/editor/SynthEditor.css
.synth-editor{
    position: relative;
    background-image: url("src/assets/infinite-background-tile-center-cross-dark.png");
    background-repeat: repeat;
    background-size: 56px;
    image-rendering: pixelated;
    width: 100%;
    height: 100%;
    overflow: hidden;
}

.synth-editor ul{
    position: relative;
    left: 0;
    top: 0;
    list-style-type: none;
    margin: 0;
    padding: 0;
}

.audionode{
    position: absolute;
    background-color: rgb(56, 56, 56);
    width: 100px;
    height: 100px;
    left: 0px;
    right: 0px;

    animation: pattern-drag-begin 1s cubic-bezier(.13,1.3,.1,1) forwards;
    transition: rotate 0.1s ease-out;
    transform-origin: left top;
}

.audio-connection-node{
    position: absolute;
    background-color: rgb(0, 0, 0);
    width: 10px;
    height: 10px;
    right: 0;
    bottom: 0;
}

.connection-lines{
    position: absolute;
    pointer-events: none;
    top: 0;
    left: 0;
}

